system/vault/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
spec:
  tls:
    - hosts:
        - vault.simonmalm.com
      secretName: simonmalm-com-tls
  rules:
    - host: vault.simonmalm.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-ui
                port:
                  number: 8200
